[package]
name = "sen6x-logger"
version = "0.1.0"
edition = "2024"
description = "Measurement Logging Utility for the Sensirion SEN6x"
license = "MIT OR Apache-2.0"
authors = ["Sean Bruton <sean@seanbruton.dev>"]
repository = "https://github.com/sbruton/sen6x-logger"
categories = ["command-line-utilities"]

[dependencies]
clapper = "0.1.1"
csv = "1.3.1"
exitcode = "1.1.2"
futures = "0.3.31"
indicatif = "0.17.11"
linux-embedded-hal = "0.4.0"
rumqttc = "0.24.0"
sen6x = { git = "https://github.com/sbruton/sen6x-rs", branch = "dev", features = [
    "serde",
    "std",
] }
serde_json = "1.0.140"
strum = { version = "0.27.1", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = [
    "fs",
    "macros",
    "rt-multi-thread",
    "sync",
] }
